--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     </a>
     <a href="articles.html" class="card" tabindex="0" aria-label="Go to Articles">
       <h2>Articles</h2>
-      <p>Read educational articles on cybersecurity and cryptography.</p>
+      <p>Read educational articles on cybersecurity and networking.</p>
     </a>
   </div>
 </body>
