--- a/articles.html
+++ b/articles.html
@@ -23,7 +23,7 @@
 </head>
 <body>
   <h1>Articles</h1>
-  <p>This section will host educational articles on cybersecurity and cryptography.</p>
+  <p>This section will host educational articles on cybersecurity and networking.</p>
   <p>Coming soon! 🔐</p>
   <p><a href="index.html">← Back to Home</a></p>
 </body>
