--- a/index.html
+++ b/index.html
@@ -95,6 +95,10 @@
       <h2>Articles</h2>
       <p>Read educational articles on cybersecurity and networking.</p>
     </a>
+    <a href="mxlookup.html" class="card" tabindex="0" aria-label="Go to MX Lookup tool">
+      <h2>MX Lookup</h2>
+      <p>Check mail server records for any domain using public DNS.</p>
+    </a>
   </div>
 </body>
 </html>
