--- a/mxlookup.html
+++ b/mxlookup.html
@@ -32,7 +32,7 @@
   <div class="wrap">
     <div class="card">
       <h1>MX Lookup</h1>
-      <p class="lead">Enter a domain and click <em>Lookup</em> — results come from public DNS-over-HTTPS (Cloudflare / Google). No backend required.</p>
+      <p class="lead">Enter a domain and click <em>Lookup</em> </p>
 
       <label for="domain">Domain</label>
       <input id="domain" type="text" placeholder="example.com" aria-label="Domain">
