--- a/index.html
+++ b/index.html
@@ -95,9 +95,15 @@
       <h2>Articles</h2>
       <p>Read educational articles on cybersecurity and networking.</p>
     </a>
+  </div>
+  <div class="grid">
     <a href="mxlookup.html" class="card" tabindex="0" aria-label="Go to MX Lookup tool">
       <h2>MX Lookup</h2>
       <p>Check mail server records for any domain using public DNS.</p>
+    </a>
+    <a href="base64image.html" class="card" tabindex="0" aria-label="Go to MX Lookup tool">
+      <h2>Base 64 Image Generator</h2>
+      <p>Convert the images into base 64.</p>
     </a>
   </div>
 </body>
