--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
       <p>Read educational articles on cybersecurity and networking.</p>
     </a>
   </div>
-  <div class="grid">
+  <div class="grid" style="padding-top: 50px;">
     <a href="mxlookup.html" class="card" tabindex="0" aria-label="Go to MX Lookup tool">
       <h2>MX Lookup</h2>
       <p>Check mail server records for any domain using public DNS.</p>
