--- a/base64image.html
+++ b/base64image.html
@@ -3,28 +3,46 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Base64 Image Generator</title>
+  <title>Base64 Image Generator - Play Lab</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #f4f4f9;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      margin: 0;
+    :root {
+      --bg: #0f172a;
+      --card-bg: #111827;
+      --accent: #38bdf8;
+      --text-light: #e6eef6;
+      --text-muted: #94a3b8;
     }
-    .container {
-      background-color: #ffffff;
-      padding: 30px;
-      border-radius: 8px;
-      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-      max-width: 500px;
-      width: 100%;
-      text-align: center;
+    body {
+      margin: 0;
+      min-height: 100vh;
+      font-family: Inter, system-ui, -apple-system, Roboto, "Segoe UI", Arial;
+      background: linear-gradient(180deg, var(--bg), #020617 80%);
+      color: var(--text-light);
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding: 40px 20px;
     }
     h1 {
-      color: #333;
+      font-size: 3rem;
+      margin-bottom: 16px;
+      color: var(--accent);
+      user-select: none;
+    }
+    p.subtitle {
+      margin: 0 0 40px;
+      font-size: 1.2rem;
+      color: var(--text-muted);
+      user-select: none;
+    }
+    .container {
+      background-color: var(--card-bg);
+      padding: 30px;
+      border-radius: 14px;
+      box-shadow: 0 6px 24px rgba(2, 6, 23, 0.5);
+      width: 100%;
+      max-width: 500px;
+      text-align: center;
     }
     input[type="file"] {
       padding: 10px;
@@ -32,6 +50,8 @@
       border: 1px solid #ccc;
       border-radius: 5px;
       background-color: #fff;
+      color: #333;
+      width: 100%;
     }
     #output {
       margin-top: 20px;
@@ -49,14 +69,30 @@
       margin-top: 20px;
       border-radius: 5px;
     }
+    button {
+      background-color: var(--accent);
+      border: none;
+      padding: 12px 20px;
+      color: var(--text-light);
+      font-size: 16px;
+      border-radius: 5px;
+      cursor: pointer;
+      margin-top: 20px;
+    }
+    button:hover {
+      background-color: #2b82db;
+    }
   </style>
 </head>
 <body>
+  <h1>Base64 Image Generator</h1>
+  <p class="subtitle">Upload an image to convert it to Base64</p>
+
   <div class="container">
-    <h1>Base64 Image Generator</h1>
     <input type="file" id="imageInput" accept="image/*" />
     <div id="output">Base64 String will appear here</div>
     <img id="imagePreview" src="" alt="Image Preview" />
+    <button id="copyButton">Copy Base64</button>
   </div>
 
   <script>
@@ -64,6 +100,7 @@
     const imageInput = document.getElementById("imageInput");
     const outputDiv = document.getElementById("output");
     const imagePreview = document.getElementById("imagePreview");
+    const copyButton = document.getElementById("copyButton");
 
     // Function to handle image input change (file upload)
     imageInput.addEventListener("change", function(event) {
@@ -84,6 +121,22 @@
 
         // Read the image file as a data URL (Base64)
         reader.readAsDataURL(file);
+      }
+    });
+
+    // Copy Base64 string to clipboard
+    copyButton.addEventListener("click", function() {
+      const base64String = outputDiv.textContent;
+      if (base64String && base64String !== "Base64 String will appear here") {
+        navigator.clipboard.writeText(base64String)
+          .then(() => {
+            alert("Base64 string copied to clipboard!");
+          })
+          .catch(err => {
+            alert("Failed to copy text: ", err);
+          });
+      } else {
+        alert("No Base64 string to copy!");
       }
     });
   </script>
