--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
   <title>Play Lab - Welcome</title>
   <style>
     :root {
@@ -76,6 +76,49 @@
       max-width: 260px;
       user-select: none;
     }
+
+    /* Media Query for Mobile Devices */
+    @media (max-width: 768px) {
+      h1 {
+        font-size: 2.4rem;
+      }
+      p.subtitle {
+        font-size: 1rem;
+      }
+      .grid {
+        grid-template-columns: 1fr;
+        padding-top: 40px;
+      }
+      .grid a.card {
+        padding: 20px;
+      }
+      a.card h2 {
+        font-size: 1.4rem;
+      }
+      a.card p {
+        font-size: 0.9rem;
+      }
+    }
+
+    /* Media Query for Smaller Mobile Devices */
+    @media (max-width: 480px) {
+      h1 {
+        font-size: 2rem;
+      }
+      p.subtitle {
+        font-size: 0.9rem;
+      }
+      .grid a.card {
+        padding: 16px;
+      }
+      a.card h2 {
+        font-size: 1.2rem;
+      }
+      a.card p {
+        font-size: 0.85rem;
+        max-width: 200px;
+      }
+    }
   </style>
 </head>
 <body>
@@ -101,7 +144,7 @@
       <h2>MX Lookup</h2>
       <p>Check mail server records for any domain using public DNS.</p>
     </a>
-    <a href="base64image.html" class="card" tabindex="0" aria-label="Go to MX Lookup tool">
+    <a href="base64image.html" class="card" tabindex="0" aria-label="Go to Base64 Image Generator tool">
       <h2>Base 64 Image Generator</h2>
       <p>Convert the images into base 64.</p>
     </a>
