--- a/index.html
+++ b/index.html
@@ -150,6 +150,10 @@
       <h2>Base 64 Image Generator</h2>
       <p>Convert the images into base 64.</p>
     </a>
+    <a href="translator.html" class="card" tabindex="0" aria-label="Go to Base64 Image Generator tool">
+      <h2>Language Translator</h2>
+      <p>Translate the text as you desire.</p>
+    </a>
   </div>
 </body>
 </html>
